# msc-thesis

./: .gitignore  Makefile  notes.txt  pyproject.toml  thesis_calendar.md  thesis_plan.md
configs/: config.json  config_VITS.json  config_cv.json  config_fast_pitch.json  config_glow_tts.json  config_glow_tts_pass2.json  config_multispeaker.json  config_tacotron2_DCA.json  config_tacotron2_DDC.json
data/raw/: included_speakers.yml
latex/paper/: .latexmkrc  LTPlius.sty  Makefile  TitlePage.tex  VUMIFTemplateClass.cls  bibliografija.bib  thesis.bbl  thesis.bcf  thesis.bcf-SAVE-ERROR  thesis.blg  thesis.lof  thesis.lot  thesis.run.xml  thesis.tex  thesis.tex.backup
latex/presentation_1/: Logo_spalvotas.eps  main.tex
latex/presentation_2/: main.tex
latex/presentation_3/: main.tex
latex/presentation_4/: main.tex
latex/presentation_final/: main.tex
notebooks/: accented_words.csv  analyze_models.ipynb  liepa_analysis.ipynb  mos_analysis.ipynb  vote_analysis.ipynb  word_accentuation.ipynb
python/: compute_embeddings.py  create_testset.py  create_trainset.py  dataset_formatters.py  dataset_utils.py  evaluate_objective_metrics.py  generate_test_samples.py  generate_thesis_figures.py  inference_multispeaker.py  prepare_test_set.py  preprocess_cv.py  preprocess_liepa2.py  preprocess_liepa2_multispeaker.py  run_inference.py  slice_liepa2.py  text_utils.py  train.py
results/: mos_results.csv  objective_metrics_summary.csv
tts_rating_app/: Dockerfile  README.md  deploy_cloudrun.sh  requirements.txt  run_local.sh  setup_cloudsql_proxy.sh  tts_rating_app.py
(+174 files in other folders)
