[project]
name = "msc-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coqui-tts>=0.27.2",
    "datasets>=4.1.1",
    "ipykernel>=7.1.0",
    "pandas>=2.3.2",
    "pydub>=0.25.1",
    "ruff>=0.13.2",
    "seaborn>=0.13.2",
]
