[project]
name = "msc-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloud-sql-python-connector>=1.18.5",
    "coqui-tts>=0.27.2",
    "datasets>=4.1.1",
    "google-cloud-storage>=3.6.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.11",
    "pydub>=0.25.1",
    "ruff>=0.13.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
]
